--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "url-regex": "^5.0.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
